<resources>
    <string name="app_name">MyTube</string>
    <!-- Song -->
    <string name="add_song">Add song</string>
    <string name="filter_song">Filtro</string>
    <string name="delete_song">Delete song</string>
    <string name="new_Song_url">añade la url</string>
    <string name="new_Song_title">nombre de la musica</string>
    <string name="new_Song_author">autor de la musica</string>
    <string name="lista_canciones">Listado de canciones: </string>
    <string name="seachAuthor">seacSong</string>
    <string name="seachSong"> Song</string>
    <string name="songs">Songs: </string>
    <string name="url">URL: </string>
    <string name="tittle">Titulo: </string>
    <string name="name_user"> </string>

    <!-- Login -->
    <string name="login">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="button_login">Conectarse</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="emptyLogin">Usuario vacio</string>
    <string name="emptyPassword">Contraseña vacia</string>
    <string name="emptyLoginAndPassword">Usuario y Contraseña vacios</string>
    <string name="wrongLogin">Usuario o contraseña incorrectos</string>

    <!-- Register -->
    <string name="noequalpassword">Las contraseñas no son iguales</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="email">Correo Electronico</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="button_register">Registrarse</string>
    <string name="wrongEmail">Formato de correo incorrecto</string>
    <string name="loginAlreadyInRepository">El login esta asignado a otra cuenta</string>
    <string name="emailAlreadyInRepository">El correo esta asignado a otra cuenta</string>
    <string name="button_back">Atras</string>
    <string name="regiterInfoLeft">Falta informacion</string>

    <!-- Change Password -->
    <string name="change_password">Cambiar contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="changedPassword">Contraseña cambiada correctamente</string>
    <string name="notChangedPassword">Contraseña actual erronea</string>
    <string name="emptyCurrentPassword">Contraseña actual vacia</string>
    <string name="emptyNewPassword">Contraseña nueva vacia</string>



    <!-- Favourite -->
    <string name="user">Usuario: </string>
    <string name="listado_de_canciones">Listado favoritos de: </string>
    <string name="appName">MyTube</string>
    <string name="favoritos">Favoritos: </string>
    <string name="author">Autor</string>
    <string name="filtros">Filtros</string>
    <string name="Autor">Autor:</string>
    <string name="cancion">Cancion:</string>
    <string name="logo">Logo</string>
    <string name="lista_de_favoritos">Favoritos</string>
    <string name="todas_las_canciones">Todas las canciones</string>
    <string name="log_out">Log Out</string>
</resources>