<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/backgroundf">

    <TextView
        android:id="@+id/textViewnUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editTextSongUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/new_Song_url"
        android:backgroundTint="@color/white"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editTextSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/new_Song_title"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textViewAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editTextSongAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_Song_author"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16dp" />

</LinearLayout>
